// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseToolIdentifier > non-strict mode valid 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 2`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 3`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 4`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 5`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 6`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 7`] = `
{
  "deploymentIdentifier": "@username/foo-bar@dev",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 8`] = `
{
  "deploymentIdentifier": "@username/foo-bar@1.0.0",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 9`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 10`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 11`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > non-strict mode valid 12`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 2`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 3`] = `
{
  "deploymentHash": "abc123lz",
  "deploymentIdentifier": "@username/foo-bar@abc123lz",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 4`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 5`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foobar123-yo@01234567",
  "projectIdentifier": "@username/foobar123-yo",
  "projectNamespace": "username",
  "projectSlug": "foobar123-yo",
  "toolName": "foo_bar_BAR_901",
}
`;

exports[`parseToolIdentifier > strict mode valid 6`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foobar@01234567",
  "projectIdentifier": "@username/foobar",
  "projectNamespace": "username",
  "projectSlug": "foobar",
  "toolName": "get_weather01",
}
`;

exports[`parseToolIdentifier > strict mode valid 7`] = `
{
  "deploymentIdentifier": "@username/foobar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foobar",
  "projectNamespace": "username",
  "projectSlug": "foobar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 8`] = `
{
  "deploymentIdentifier": "@username/foobar@dev",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foobar",
  "projectNamespace": "username",
  "projectSlug": "foobar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 9`] = `
{
  "deploymentIdentifier": "@username/foobar@1.0.0",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foobar",
  "projectNamespace": "username",
  "projectSlug": "foobar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 10`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 11`] = `
{
  "deploymentIdentifier": "@username/foo-bar@dev",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 12`] = `
{
  "deploymentIdentifier": "@username/foo-bar@1.0.0",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 13`] = `
{
  "deploymentIdentifier": "@username/foobar123-yo@0.0.1",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foobar123-yo",
  "projectNamespace": "username",
  "projectSlug": "foobar123-yo",
  "toolName": "foo_bar_BAR_901",
}
`;

exports[`parseToolIdentifier > strict mode valid 14`] = `
{
  "deploymentIdentifier": "@username/foobar123-yo@0.0.1",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foobar123-yo",
  "projectNamespace": "username",
  "projectSlug": "foobar123-yo",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 15`] = `
{
  "deploymentIdentifier": "@u/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@u/foo-bar",
  "projectNamespace": "u",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 16`] = `
{
  "deploymentIdentifier": "@a/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@a/foo-bar",
  "projectNamespace": "a",
  "projectSlug": "foo-bar",
  "toolName": "foo_123",
}
`;

exports[`parseToolIdentifier > strict mode valid 17`] = `
{
  "deploymentIdentifier": "@foo/foobar123-yo@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@foo/foobar123-yo",
  "projectNamespace": "foo",
  "projectSlug": "foobar123-yo",
  "toolName": "foo_bar_BAR_901",
}
`;

exports[`parseToolIdentifier > strict mode valid 18`] = `
{
  "deploymentIdentifier": "@foo/foobar123-yo@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@foo/foobar123-yo",
  "projectNamespace": "foo",
  "projectSlug": "foobar123-yo",
  "toolName": "foo",
}
`;

exports[`parseToolIdentifier > strict mode valid 19`] = `
{
  "deploymentIdentifier": "@foo/bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@foo/bar",
  "projectNamespace": "foo",
  "projectSlug": "bar",
  "toolName": "baz",
}
`;
